--- a/compliment.css
+++ b/compliment.css
@@ -4,3 +4,42 @@ h1 {
 	padding-bottom: 10px;
 	padding-top: 10px;
 }
+
+li {
+    margin-bottom: 5px;
+	line-height: 150%;
+}
+
+#process {
+	background-color: #EEDDDF;
+	padding-bottom: 50px;
+}
+
+#userflow {
+	width: 100%;
+}
+
+.design {
+	width: 45%;
+	align-self: flex-start;
+}
+
+.design2 {
+	width: 100%;
+	margin-bottom: 30px;
+}
+
+.grid2 {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+.grid3 {
+	width: 45%;
+	display:flex;
+	flex-direction: column;
+}
