--- a/index.css
+++ b/index.css
@@ -187,6 +187,10 @@ button {
 	font-size: 18px;
 }
 
+h2 {
+	text-align: center;
+}
+
 @media screen and (max-width: 600px) {
 	.navbutton1 {
 		padding-right: 0px;
